// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when validating domain entity domain item duplicates domain items should have one validation failure 1`] = `"Domain Entity Domain Item 'DomainEntityName' has a duplicate Domain Item."`;

exports[`when validating domain entity domain item duplicates domain items should have one validation failure 2`] = `
Object {
  "column": 18,
  "line": 5,
  "tokenText": "DomainEntityName",
}
`;

exports[`when validating domain entity domain item has multiple duplicate domain items should have multiple validation failures 1`] = `"Domain Entity Domain Item 'DomainEntityName' has a duplicate Domain Item."`;

exports[`when validating domain entity domain item has multiple duplicate domain items should have multiple validation failures 2`] = `
Object {
  "column": 18,
  "line": 5,
  "tokenText": "DomainEntityName",
}
`;

exports[`when validating domain entity domain item has multiple duplicate domain items should have multiple validation failures 3`] = `"Domain Entity Domain Item 'DomainEntityName2' has a duplicate Domain Item."`;

exports[`when validating domain entity domain item has multiple duplicate domain items should have multiple validation failures 4`] = `
Object {
  "column": 18,
  "line": 8,
  "tokenText": "DomainEntityName2",
}
`;
